correções no modal de produtos para se adaptar a telas pequenas.

--- a/products.html
+++ b/products.html
@@ -454,6 +454,19 @@
         </p>
       </div>
 
+      <div class="quantity-wrapper">
+        <label for="quantity">
+          Quantidade
+        </label>
+        <select name="product-quantity" id="quantity">
+          <option value="1">1 unidade</option>
+          <option value="2">2 unidades</option>
+          <option value="3">3 unidades</option>
+          <option value="4">4 unidades</option>
+          <option value="5">5 unidades</option>
+        </select>
+      </div>
+
       <button class="buy">
         Adicionar ao Carrinho
       </button>
