--- a/checkout.html
+++ b/checkout.html
@@ -254,7 +254,68 @@
     </div>
 
     <div class="module">
+      <h3>Endereços de Entrega</h3>
 
+      <div class="left">
+        <div class="address-card active">
+          <p class="title">Casa</p>
+          <p class="description">
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+          </p>
+        </div>
+
+        <div class="address-card">
+          <p class="title">Outro</p>
+          <p class="description">
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+          </p>
+        </div>
+      </div>
+      <div class="right">
+
+      </div>
+    </div>
+
+    <div class="module">
+      <h3>Forma de Pagamento</h3>
+
+      <div class="left">
+        <div class="changer-wrapper">
+          <button id="forceCard" class="active">
+            Cartão de Crédito
+          </button>
+          <button id="forceBoleto">
+            Boleto Bancário
+          </button>
+        </div>
+
+        <div class="credit-card-list">
+          <div class="credit-card-entry active">
+            <div class="flag visa"></div>
+            <p class="title">1111 2222 3333 4444</p>
+          </div>
+
+          <div class="credit-card-entry">
+            <div class="flag mastercard"></div>
+            <p class="title">1111 2222 3333 4444</p>
+          </div>
+
+          <a href="profile.html">
+            <button class="shop">
+              Cadastrar novo Cartão
+            </button>
+          </a>
+        </div>
+
+        <div class="boleto-list">
+          O boleto será gerado quando a compra for
+          finalizada.
+        </div>
+      </div>
+
+      <div class="right">
+
+      </div>
     </div>
 	</section>
 
@@ -394,6 +455,21 @@
 				Criar Conta
 			</button>
 		</div>
+
+    <div class="buyingComplete">
+      <div class="icon"></div>
+
+      <p class="title">
+        Compra Realizada com Sucesso!
+      </p>
+
+      <p class="description">
+        Suas compras serão enviadas para o endereço
+        escolhido assim que o pagamento for processado.
+        No caso de pagamentos via boleto, pode levar até
+        3 dias úteis para processar.
+      </p>
+    </div>
 	</div>
 	</section>
 </body>
