Aparentemente, tudo pronto

--- a/checkout.html
+++ b/checkout.html
@@ -272,7 +272,30 @@
         </div>
       </div>
       <div class="right">
+        <h3>Cadastrar novo Endereço</h3>
 
+        <label for="data-address">Endereço:</label>
+        <input type="text" class="changer" id="data-address">
+
+        <div class="col-left">
+          <label for="data-zip">CEP:</label>
+          <input type="tel" class="changer" id="data-zip">
+
+          <label for="data-number">Número:</label>
+          <input type="text" class="changer" id="data-number">
+        </div>
+
+        <div class="col-right">
+          <label for="data-extra">Complemento:</label>
+          <input type="text" class="changer" id="data-extra">
+
+          <label for="data-city">Cidade:</label>
+          <input type="text" class="changer" id="data-city">
+        </div>
+
+        <button id="save-new-address">
+          Cadastrar
+        </button>
       </div>
     </div>
 
@@ -314,7 +337,24 @@
       </div>
 
       <div class="right">
+        <h5>Subtotal</h5>
 
+        <div class="total">
+          <p>Compras</p>
+          <p>R$ 80,00</p>
+        </div>
+        <div class="frete">
+          <p>Entrega</p>
+          <p>R$ 15,00</p>
+        </div>
+        <div class="totalPrice">
+          <p>Total</p>
+          <p>R$ 95,00</p>
+        </div>
+
+        <button class="shop">
+          Finalizar Compra
+        </button>
       </div>
     </div>
 	</section>
