--- a/checkout.html
+++ b/checkout.html
@@ -352,7 +352,7 @@
           <p>R$ 95,00</p>
         </div>
 
-        <button class="shop">
+        <button id="finish" class="shop">
           Finalizar Compra
         </button>
       </div>
