cleaning up the code

--- a/index.html
+++ b/index.html
@@ -6,11 +6,9 @@
   <meta name="viewport" content="width=device-width, user-scalable=no">
 
   <link rel="icon" type="image/png" href="img/favicon.png" />
-  <link rel="manifest" href="https://mayrinck.github.io/mercadu-frontend/manifest.json">
   <link rel="stylesheet" href="thirdParty/OwlCarousel/assets/owl.carousel.min.css">
   <link rel="stylesheet" href="thirdParty/OwlCarousel/assets/owl.theme.default.min.css">
   <link rel="stylesheet" href="css/default.css">
-  <link rel="stylesheet" href="css/responsive.css">
   <link rel="stylesheet" href="css/index.css">
 
   <title>Mercadu - Compras Online</title>
@@ -497,6 +495,19 @@
           Passa por um processo quase manual para criar a consistência e o
           sabor que só este pão tem.
         </p>
+      </div>
+
+      <div class="quantity-wrapper">
+        <label for="quantity">
+          Quantidade
+        </label>
+        <select name="product-quantity" id="quantity">
+          <option value="1">1 unidade</option>
+          <option value="2">2 unidades</option>
+          <option value="3">3 unidades</option>
+          <option value="4">4 unidades</option>
+          <option value="5">5 unidades</option>
+        </select>
       </div>
 
       <button class="buy">
