adding icons and stuff

--- a/dashboard.html
+++ b/dashboard.html
@@ -12,12 +12,15 @@
 </head>
 <body>
   <aside>
-    <div class="logo"></div>
+    <a href="#">
+      <div class="logo"></div>
+    </a>
 
     <nav>
       <button class="dashboard"></button>
-      <button class="promo"></button>
+      <button class="lists"></button>
       <button class="tags"></button>
+      <button class="promo"></button>
       <button class="user"></button>
     </nav>
   </aside>
