--- a/dashboard.html
+++ b/dashboard.html
@@ -17,7 +17,7 @@
     </a>
 
     <nav>
-      <button class="dashboard"></button>
+      <button class="dashboard active"></button>
       <button class="lists"></button>
       <button class="tags"></button>
       <button class="promo"></button>
