--- a/dashboard.html
+++ b/dashboard.html
@@ -17,7 +17,7 @@
     </a>
 
     <nav>
-      <button class="dashboard active"></button>
+      <button class="dashboard-active"></button>
       <button class="lists"></button>
       <button class="tags"></button>
       <button class="promo"></button>
@@ -26,7 +26,9 @@
   </aside>
 
   <header>
-
+    <button class="menu2">
+      Olá, Roy Harper!
+    </button>
   </header>
 
   <section class="content">
