--- a/dashboard.html
+++ b/dashboard.html
@@ -32,7 +32,11 @@
   </header>
 
   <section class="content">
-
+    <div class="default">
+      <div class="recent-products-module">
+        <h1>Produtos Recentes</h1>
+      </div>
+    </div>
   </section>
 </body>
 </html>
