--- a/dashboard.html
+++ b/dashboard.html
@@ -36,6 +36,22 @@
       <div class="recent-products-module">
         <h1>Produtos Recentes</h1>
       </div>
+
+      <div class="promotions-module">
+        <h1>Promoções Ativas</h1>
+      </div>
+
+      <div class="income-module">
+        <h1>Lucro Diário</h1>
+      </div>
+    </div>
+
+    <div class="right best-selling-module">
+      <h1>Mais Vendidos</h1>
+
+      <div class="wrapper">
+
+      </div>
     </div>
   </section>
 </body>
