added purple and red as colors

--- a/dashboard.html
+++ b/dashboard.html
@@ -45,6 +45,12 @@
 
       <div class="income-module">
         <h1>Lucro Diário</h1>
+        <select name="months" id="months">
+            <option value="1">Janeıro</option>
+            <option value="2">Fevereıro</option>
+            <option value="3">Março</option>
+            <option value="4">Abrıl</option>
+        </select>
       </div>
     </div>
 
